--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -178,14 +178,14 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 ## Implementation Plan
 
 ### Phase 1: Critical Bug Fixes (Priority 1)
-1.1 [ ] Fix `Matrix.rowIndices()` to execute criteria and add regression test for `removeEmptyRows` (Matrix.groovy:2139)
-1.2 [ ] Fix `MatrixAssertions` to throw exceptions in `assertNotEquals`/`assertContentNotEquals` (MatrixAssertions.groovy:17)
-1.3 [ ] Rewrite `Matrix.dropExcept(int...)` and `Grid.dropExcept()` to avoid index-shift bugs; add coverage (Matrix.groovy:953, Grid.groovy:930-962)
-1.4 [ ] Add division-by-zero check in `Stat.variance()` (Stat.groovy:761)
-1.5 [ ] Fix `MatrixBuilder` Path.contains() bug - use filename string instead of Path (MatrixBuilder.groovy:360)
-1.6 [ ] Update `diff` and `checkValues` to handle nulls explicitly without treating `0` as false; add tests (Matrix.groovy:895,1111)
-1.7 [ ] Replace `Arrays.sort(indexes)` with `indexes.sort()` in `removeRows(List)` and test unsorted removal (Matrix.groovy:1949)
-1.8 [ ] Run tests: `./gradlew :matrix-core:test`
+1.1 [x] Fix `Matrix.rowIndices()` to execute criteria and add regression test for `removeEmptyRows` (Matrix.groovy:2139)
+1.2 [x] Fix `MatrixAssertions` to throw exceptions in `assertNotEquals`/`assertContentNotEquals` (MatrixAssertions.groovy:17)
+1.3 [x] Rewrite `Matrix.dropExcept(int...)` and `Grid.dropExcept()` to avoid index-shift bugs; add coverage (Matrix.groovy:953, Grid.groovy:930-962 - Note: Grid.dropExcept() did not exist)
+1.4 [x] Add division-by-zero check in `Stat.variance()` (Stat.groovy:761)
+1.5 [x] Fix `MatrixBuilder` Path.contains() bug - use filename string instead of Path (MatrixBuilder.groovy:360)
+1.6 [x] Update `diff` and `checkValues` to handle nulls explicitly without treating `0` as false; add tests (Matrix.groovy:895,1111)
+1.7 [x] Replace `Arrays.sort(indexes)` with `indexes.sort()` in `removeRows(List)` and test unsorted removal (Matrix.groovy:1949)
+1.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 2: Code Quality & Refactoring (Priority 2)
 2.1 [ ] Optionally add explicit return to `Grid.toString()` for clarity (Grid.groovy:165)
@@ -233,9 +233,9 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 5.3 [ ] Document new build targets and quality gates in README
 
 ## Success Criteria
-- [ ] All critical bugs (Phase 1) fixed with tests
-- [ ] Test suite passes: `./gradlew :matrix-core:test`
-- [ ] No regression in existing functionality
+- [x] All critical bugs (Phase 1) fixed with tests
+- [x] Test suite passes: `./gradlew :matrix-core:test` (199/199 tests passing)
+- [x] No regression in existing functionality
 - [ ] Code coverage maintained or improved (measured via JaCoCo)
 - [ ] Static analysis passing (CodeNarc/SonarLint)
 - [ ] Documentation updated for all changes
