--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -188,18 +188,18 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 1.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 2: Code Quality & Refactoring (Priority 2)
-2.1 [ ] Optionally add explicit return to `Grid.toString()` for clarity (Grid.groovy:165)
-2.2 [ ] Refactor `ClassUtils.nearest()` to use lookup table or priority algorithm (ClassUtils.groovy:96-188)
-2.3 [ ] Extract common null-handling in Column arithmetic operations to `applyOperation()` method (Column.groovy:64-224)
-2.4 [ ] Refactor ValueConverter for better modularity (#27)
-2.4.1 [ ] Unify duplicate cache management methods (ValueConverter.groovy:504-520)
-2.4.2 [ ] Consider organizing conversions by target type families (numeric, temporal, string converters)
-2.5 [ ] Remove unused `jdk.internal.reflect.Reflection` import (ClassUtils.groovy:4)
-2.6 [ ] Add null-check handling in `Stat.addNumericSummary()` callers (Stat.groovy:74)
-2.7 [ ] Fix `ListConverter.convert()` assignability check to `type.isAssignableFrom(it.class)` (ListConverter.groovy:23)
-2.8 [ ] Fix opentest4j dependency scope from `implementation` to `testImplementation` (build.gradle:43)
-2.9 [ ] Consider refactoring `getAt/putAt` dispatching methods for better maintainability (#25)
-2.10 [ ] Run tests: `./gradlew :matrix-core:test`
+2.1 [x] Add explicit return to `Grid.toString()` for clarity (Grid.groovy:165)
+2.2 [x] Refactor `ClassUtils.nearest()` to use lookup table - Reduced from 92 lines to 35 lines using Map-based lookup (ClassUtils.groovy:95-129)
+2.3 [x] Extract common null-handling in Column arithmetic operations to `applyOperation()` method (Column.groovy:64-224)
+2.4 [x] Refactor ValueConverter for better modularity (#27)
+2.4.1 [x] Unify duplicate cache management methods - Made `dateTimeFormatter` consistent with `simpleDateFormatCache` by including locale in cache key (ValueConverter.groovy:513-521)
+2.4.2 [ ] Consider organizing conversions by target type families (numeric, temporal, string converters) - Deferred to future release
+2.5 [x] Remove unused `jdk.internal.reflect.Reflection` import (ClassUtils.groovy:3)
+2.6 [x] Add null-check handling in `Stat.addNumericSummary()` callers - Added null checks in both summary() methods (Stat.groovy:52-54,68-71)
+2.7 [x] Fix `ListConverter.convert()` assignability check to `type.isAssignableFrom(it.class)` (ListConverter.groovy:30)
+2.8 [x] Fix opentest4j dependency scope from `implementation` to `testImplementation` and replace AssertionFailedError with IllegalArgumentException in Matrix.handleError() (build.gradle:43, Matrix.groovy:1102)
+2.9 [ ] Consider refactoring `getAt/putAt` dispatching methods for better maintainability (#25) - Deferred to future release
+2.10 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 3: API & Documentation (Priority 3)
 3.1 [ ] Clarify `split(int chunkSize)` semantics and update implementation/docs/tests (Matrix.groovy:2240)
