--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -202,16 +202,19 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 2.10 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 3: API & Documentation (Priority 3)
-3.1 [ ] Clarify `split(int chunkSize)` semantics and update implementation/docs/tests (Matrix.groovy:2240)
-3.2 [ ] Align `dropEmptyColumns` behavior with docs or update docs; add tests (Matrix.groovy:1968)
-3.3 [ ] Standardize logging framework (#20)
-3.3.1 [ ] Add SLF4J facade dependency to build.gradle
-3.3.2 [ ] Replace System.err.println with SLF4J logger calls (MatrixBuilder.groovy:481, Stat.groovy:74)
-3.4 [ ] Standardize null/empty string handling in ValueConverter methods (part of #27)
-3.5 [ ] Document deprecated methods: removal timeline, performance implications, behavioral differences
-3.6 [ ] Fix JavaDoc typos and add missing documentation (Grid.groovy:80, ClassUtils.groovy:81, MatrixBuilder.rows():120, Grid.isValid():286)
-3.7 [ ] Consider MatrixPrinter dependency inversion for better separation of concerns (#26)
-3.8 [ ] Run tests: `./gradlew :matrix-core:test`
+3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, updated docs, added validation for edge cases (Matrix.groovy:2243-2267)
+3.2 [x] Align `dropEmptyColumns` behavior with docs - Now uses `containsValues()` to properly check for blank strings (Matrix.groovy:1978-1988)
+3.3 [ ] Standardize logging framework (#20) - **REVERTED**: SLF4J adds dependency complexity for scripting use cases; System.err.println is appropriate for this library
+3.3.1 [~] Add SLF4J facade dependency to build.gradle - Reverted
+3.3.2 [~] Replace System.err.println with SLF4J logger calls - Reverted
+3.4 [ ] Standardize null/empty string handling in ValueConverter methods (part of #27) - Deferred to future release
+3.5 [ ] Document deprecated methods: removal timeline, performance implications, behavioral differences - Deferred to future release
+3.6 [x] Fix JavaDoc typos and add missing documentation:
+     - Grid.groovy:75 - Fixed "Insert a row i" → "at"
+     - ClassUtils.groovy:80 - Fixed "Flloat" → "Float", "hiearchy" → "hierarchy"
+     - Grid.isValid():283,287 - Added comprehensive JavaDoc for both overloads
+3.7 [ ] Consider MatrixPrinter dependency inversion for better separation of concerns (#26) - Deferred to future release
+3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 4: Performance & Testing (Priority 4)
 4.1 [ ] Optimize Stat methods to use columnar access instead of nested row iteration (sd(), means(), medians())
