--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -202,7 +202,7 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 2.10 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 3: API & Documentation (Priority 3)
-3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, updated docs, added validation for edge cases (Matrix.groovy:2243-2267)
+3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, rewrote implementation to evenly distribute rows using base size + remainder algorithm, fixed validation to allow numChunks == rowCount(), updated docs with correct examples (Matrix.groovy:2243-2267)
 3.2 [x] Align `dropEmptyColumns` behavior with docs - Now uses `containsValues()` to properly check for blank strings (Matrix.groovy:1978-1988)
 3.3 [ ] Standardize logging framework (#20) - **REVERTED**: SLF4J adds dependency complexity for scripting use cases; System.err.println is appropriate for this library
 3.3.1 [~] Add SLF4J facade dependency to build.gradle - Reverted
