1. split() Edge Cases (MatrixTest.groovy:1383-1409)
  Added testChunkSplitEdgeCases() with comprehensive validation tests:
  - numChunks < 1: Tests with 0 and -1 (throws IllegalArgumentException)
  - numChunks > rowCount(): Tests with 31 and 100 on 30-row matrix (throws IllegalArgumentException)
  - numChunks == rowCount(): Tests 30 chunks for 30 rows - each chunk gets exactly 1 row
  - numChunks == 1: Tests single chunk containing all 30 rows

  2. dropEmptyColumns() Blank Strings (MatrixTest.groovy:1008-1023)

  Added testRemoveEmptyColumnsWithBlankStrings() to verify:
  - Columns with empty strings ('') are removed
  - Columns with whitespace-only strings ('  ') are removed
  - Columns with mixed null and blank strings are removed
  - Columns with actual values are retained

--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -202,8 +202,8 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 2.10 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 3: API & Documentation (Priority 3)
-3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, rewrote implementation to evenly distribute rows using base size + remainder algorithm, fixed validation to allow numChunks == rowCount(), updated docs with correct examples (Matrix.groovy:2243-2267)
-3.2 [x] Align `dropEmptyColumns` behavior with docs - Now uses `containsValues()` to properly check for blank strings (Matrix.groovy:1978-1988)
+3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, rewrote implementation to evenly distribute rows using base size + remainder algorithm, fixed validation to allow numChunks == rowCount(), updated docs with correct examples. Added comprehensive edge case tests for validation logic (Matrix.groovy:2243-2267, MatrixTest.groovy:1383-1409)
+3.2 [x] Align `dropEmptyColumns` behavior with docs - Now uses `containsValues()` to properly check for blank strings. Added test coverage for blank string handling (Matrix.groovy:1978-1988, MatrixTest.groovy:1008-1023)
 3.3 [ ] Standardize logging framework (#20) - **REVERTED**: SLF4J adds dependency complexity for scripting use cases; System.err.println is appropriate for this library
 3.3.1 [~] Add SLF4J facade dependency to build.gradle - Reverted
 3.3.2 [~] Replace System.err.println with SLF4J logger calls - Reverted
@@ -214,7 +214,7 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
      - ClassUtils.groovy:80 - Fixed "Flloat" → "Float", "hiearchy" → "hierarchy"
      - Grid.isValid():283,287 - Added comprehensive JavaDoc for both overloads
 3.7 [ ] Consider MatrixPrinter dependency inversion for better separation of concerns (#26) - Deferred to future release
-3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
+3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (201 tests, 201 passed, 0 failed, 0 skipped)** - Added 2 new tests for edge case coverage
 
 ### Phase 4: Performance & Testing (Priority 4)
 4.1 [ ] Optimize Stat methods to use columnar access instead of nested row iteration (sd(), means(), medians())
@@ -237,9 +237,9 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 
 ## Success Criteria
 - [x] All critical bugs (Phase 1) fixed with tests
-- [x] Test suite passes: `./gradlew :matrix-core:test` (199/199 tests passing)
+- [x] Test suite passes: `./gradlew :matrix-core:test` (201/201 tests passing - includes edge case coverage)
 - [x] No regression in existing functionality
 - [ ] Code coverage maintained or improved (measured via JaCoCo)
 - [ ] Static analysis passing (CodeNarc/SonarLint)
-- [ ] Documentation updated for all changes
-- [ ] Dependency management cleaned up (SLF4J standardized, opentest4j scope corrected)
+- [x] Documentation updated for all changes
+- [x] Dependency management cleaned up (opentest4j scope corrected; SLF4J standardization reverted)
