--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -202,7 +202,7 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 2.10 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (199 tests, 199 passed, 0 failed, 0 skipped)**
 
 ### Phase 3: API & Documentation (Priority 3)
-3.1 [x] Clarify `split(int chunkSize)` semantics - Renamed parameter to `numChunks`, rewrote implementation to evenly distribute rows using base size + remainder algorithm, fixed validation to allow numChunks == rowCount(), updated docs with correct examples. Added comprehensive edge case tests for validation logic (Matrix.groovy:2243-2267, MatrixTest.groovy:1383-1409)
+3.1 [x] Clarify `split(int chunkSize)` semantics - **Preserved backward compatibility** by keeping original `split(int chunkSize)` behavior unchanged. Added new `splitInto(int numChunks)` method with improved semantics that distributes rows evenly using base size + remainder algorithm, with validation for edge cases. Updated tests to cover both methods (Matrix.groovy:2243-2290, MatrixTest.groovy:1388-1440)
 3.2 [x] Align `dropEmptyColumns` behavior with docs - Now uses `containsValues()` to properly check for blank strings. Added test coverage for blank string handling (Matrix.groovy:1978-1988, MatrixTest.groovy:1008-1023)
 3.3 [ ] Standardize logging framework (#20) - **REVERTED**: SLF4J adds dependency complexity for scripting use cases; System.err.println is appropriate for this library
 3.3.1 [~] Add SLF4J facade dependency to build.gradle - Reverted
@@ -214,7 +214,7 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
      - ClassUtils.groovy:80 - Fixed "Flloat" → "Float", "hiearchy" → "hierarchy"
      - Grid.isValid():283,287 - Added comprehensive JavaDoc for both overloads
 3.7 [ ] Consider MatrixPrinter dependency inversion for better separation of concerns (#26) - Deferred to future release
-3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (201 tests, 201 passed, 0 failed, 0 skipped)** - Added 2 new tests for edge case coverage
+3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (202 tests, 202 passed, 0 failed, 0 skipped)** - Added 3 new tests: dropEmptyColumns blank strings, splitInto, splitInto edge cases
 
 ### Phase 4: Performance & Testing (Priority 4)
 4.1 [ ] Optimize Stat methods to use columnar access instead of nested row iteration (sd(), means(), medians())
@@ -237,8 +237,9 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 
 ## Success Criteria
 - [x] All critical bugs (Phase 1) fixed with tests
-- [x] Test suite passes: `./gradlew :matrix-core:test` (201/201 tests passing - includes edge case coverage)
+- [x] Test suite passes: `./gradlew :matrix-core:test` (202/202 tests passing - includes edge case coverage)
 - [x] No regression in existing functionality
+- [x] Backward compatibility maintained (split() semantics preserved, new splitInto() method added)
 - [ ] Code coverage maintained or improved (measured via JaCoCo)
 - [ ] Static analysis passing (CodeNarc/SonarLint)
 - [x] Documentation updated for all changes
