--- a/matrix-core/v3.6.0-roadmap.md
+++ b/matrix-core/v3.6.0-roadmap.md
@@ -217,12 +217,13 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 3.8 [x] Run tests: `./gradlew :matrix-core:test` - **SUCCESS (202 tests, 202 passed, 0 failed, 0 skipped)** - Added 3 new tests: dropEmptyColumns blank strings, splitInto, splitInto edge cases
 
 ### Phase 4: Performance & Testing (Priority 4)
-4.1 [ ] Optimize Stat methods to use columnar access instead of nested row iteration (sd(), means(), medians())
-4.2 [ ] Add tests for empty matrix edge cases
-4.3 [ ] Add tests for null input handling edge cases
-4.4 [ ] Add tests for boundary conditions
-4.5 [ ] Review @CompileDynamic methods for static compilation opportunities (25 methods identified)
-4.6 [ ] Run full test suite: `./gradlew :matrix-core:test`
+4.1 [x] Optimize Stat methods to use columnar access instead of nested row iteration - Optimized means(), medians(), and sd() methods for Matrix to use direct column access, eliminating O(n*m) row iteration (Stat.groovy:405-420,511-520,762-785)
+4.2 [x] Add tests for empty matrix edge cases - Added tests for Stat.str(), Matrix.dropExcept(), and Grid.transpose() with empty matrices (StatTest.groovy:428-445, MatrixTest.groovy:694-712, GridTest.groovy:161-182)
+4.3 [x] Add tests for null input handling edge cases - Added comprehensive null input tests for mean, median, sd, variance methods (StatTest.groovy:447-464)
+4.4 [x] Add tests for boundary conditions - Added single-element tests including sd() with bias correction edge case (StatTest.groovy:466-481)
+4.5 [x] Review @CompileDynamic methods for static compilation opportunities - Reviewed 41 @CompileDynamic usages; identified candidates in Column arithmetic and Stat methods; deferred conversion to future release as optimization would require careful testing
+4.6 [x] Fix sd() null handling bug - Fixed NPE when variance returns null (e.g., single element with bias correction) by adding null check before Math.sqrt (Stat.groovy:817-819)
+4.7 [x] Run full test suite: `./gradlew :matrix-core:test` - **SUCCESS (207 tests, 207 passed, 0 failed, 0 skipped)** - Added 5 new edge case tests
 
 ### Phase 5: Build Infrastructure & Quality Tools (Priority 5)
 5.1 [ ] Integrate static analysis tooling
@@ -237,10 +238,13 @@ This roadmap addresses critical bugs, performance issues, code quality improveme
 
 ## Success Criteria
 - [x] All critical bugs (Phase 1) fixed with tests
-- [x] Test suite passes: `./gradlew :matrix-core:test` (202/202 tests passing - includes edge case coverage)
+- [x] Code quality improvements (Phase 2) completed
+- [x] API & documentation improvements (Phase 3) completed
+- [x] Performance optimizations (Phase 4) completed - Stat methods now use columnar access
+- [x] Test suite passes: `./gradlew :matrix-core:test` (207/207 tests passing - includes 5 new edge case tests)
 - [x] No regression in existing functionality
 - [x] Backward compatibility maintained (split() semantics preserved, new splitInto() method added)
-- [ ] Code coverage maintained or improved (measured via JaCoCo)
-- [ ] Static analysis passing (CodeNarc/SonarLint)
+- [ ] Code coverage maintained or improved (measured via JaCoCo) - Deferred to Phase 5
+- [ ] Static analysis passing (CodeNarc/SonarLint) - Deferred to Phase 5
 - [x] Documentation updated for all changes
 - [x] Dependency management cleaned up (opentest4j scope corrected; SLF4J standardization reverted)
